--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World!</h1>
 <p>This is a simple HTML page.</p>
+<p>Made by Swopnile Sarkar</p>
+<p>Made With Love</p>
+
 </body>
 </html>
